# university-db

./: CMakeLists.txt  README.md
inc/: Database.hpp  Employee.hpp  Person.hpp  Pesel.hpp  Student.hpp
scripts/: build.py  generatePerson.py
src/: Database.cpp  Employee.cpp  Person.cpp  Pesel.cpp  Student.cpp  Studnet.cpp  main.cpp
test/: test.cpp
